--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -7,11 +7,6 @@ services:
       - '8443:8443' # nifi ui 
       - '9005:9005' # http listener by nifi
     volumes: 
-      - "./nifi/database_repository:/opt/nifi/nifi-current/database_repository"
-      - "./nifi/flowfile_repository:/opt/nifi/nifi-current/flowfile_repository"
-      - "./nifi/content_repository:/opt/nifi/nifi-current/content_repository"
-      - "./nifi/provenance_repository:/opt/nifi/nifi-current/provenance_repository"
-      - "./nifi/state:/opt/nifi/nifi-current/state"
       - "./nifi/logs:/opt/nifi/nifi-current/logs"
       - "./nifi/keystore:/opt/nifi/nifi-current/keystore"
-      - "./data:/opt/data"
+      - "./data:/opt/nifi/data"
